--- a/config.json
+++ b/config.json
@@ -4,15 +4,16 @@
         "title": ""
     },
     "boardgamegeek": {
-        "user_name": "YOUR_BGG_USERNAME",
+        "user_name": "baschleicher",
         "extra_params": {
             "own": 1
         }
     },
     "algolia": {
-        "app_id": "YOUR_APP_ID",
-        "api_key_search_only": "YOUR_PUBLIC_API_KEY",
-        "index_name": "YOUR_INDEX_NAME",
-        "hits_per_page": 24
+        "app_id": "N5SDYMQ8JI",
+        "api_key_search_only": "9110567d54770dbedfdb75f52e027957",
+        "index_name": "BGG",
+        "hits_per_page": 24,
+        "sort_by": "asc(name)"
     }
 }
